dons_tests/valid_kxi/dot_type_check.kxi
class MyClass {
    public int x = 4;
    public void func() {}
}    
void main(){
    MyClass A = new MyClass();
    A.func();
    int x = A.x;
}
