dons_tests/invalid_kxi/bad_args_type_check.kxi
class MyClass {
    static public void func(int a, char b) {}
}    
void main(){
    MyClass.func('c', 1);
    MyClass.func();
}
